<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yzfapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="image_null">null</string>
    <string name="fopt_order_number">订单号：</string>
    <string name="fopt_customer_name">客户名：</string>
    <string name="al_user_name">用户名</string>
    <string name="al_password">密码</string>
    <string name="al_login">登 录</string>
    <string name="button_aml_next_step">下一步</string>
    <string name="button_aml_reject">审核失败</string>
    <string name="button_aml_approve">审核通过</string>
    <string name="button_aiu_upload">上传照片</string>
    <string name="button_aiu_request">申请审核</string>
    <string name="button_aca_submit">提 交</string>
    <string name="radio_aca_very_satisfied">非常满意，通过验收</string>
    <string name="radio_aca_satisfied">满意，通过验收</string>
    <string name="radio_aca_approve">通过验收</string>
    <string name="radio_aca_reject">拒绝通过验收</string>
    <string name="text_aca_description">请输入您的意见或建议：</string>
    
    <string name="text_fa_address">公司地址：德州市德城区东方红路帝景苑商业楼10号</string>
    <string name="text_fa_phone_contact">联系电话：0534-2609333</string>
    <string name="text_fa_phone_support">客服电话：0534-2609222</string>
    <string name="text_fa_phone_shop">店面电话：0534-2609111</string>
</resources>
