<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >
   
	<ImageView
		android:id="@+id/iv_fa_logo"
		android:layout_width="228.0dip"
		android:layout_height="51.0dip"
		android:layout_marginTop="50.0dip"
		android:layout_centerHorizontal="true"
		android:scaleType="fitXY"
		android:src="@drawable/yzf_logo"
		android:contentDescription="@string/image_null" />
     
 	<TextView 
        android:id="@+id/tv_fa_address" 
        android:textSize="16sp" 
        android:textColor="@color/black" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="30.0dip" 
        android:text="@string/text_fa_address"
        android:autoLink="phone" 
        android:layout_alignLeft="@id/iv_fa_logo"
        android:layout_alignRight="@id/iv_fa_logo"
        android:layout_below="@id/iv_fa_logo" />

 	<TextView 
        android:id="@+id/tv_fa_phone_contact" 
        android:textSize="16sp" 
        android:textColor="@color/black" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="30.0dip" 
        android:text="@string/text_fa_phone_contact"
        android:autoLink="phone" 
        android:layout_alignLeft="@id/iv_fa_logo"
        android:layout_alignRight="@id/iv_fa_logo"
        android:layout_below="@id/tv_fa_address" />
 	
 	<TextView 
        android:id="@+id/tv_fa_phone_support" 
        android:textSize="16sp" 
        android:textColor="@color/black" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="10.0dip" 
        android:text="@string/text_fa_phone_support"
        android:autoLink="phone" 
        android:layout_alignLeft="@id/iv_fa_logo"
        android:layout_alignRight="@id/iv_fa_logo"
        android:layout_below="@id/tv_fa_phone_contact" />
 	
 	<TextView 
        android:id="@+id/tv_fa_phone_shop" 
        android:textSize="16sp" 
        android:textColor="@color/black" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="10.0dip" 
        android:text="@string/text_fa_phone_shop"
        android:autoLink="phone" 
        android:layout_alignLeft="@id/iv_fa_logo"
        android:layout_alignRight="@id/iv_fa_logo"
        android:layout_below="@id/tv_fa_phone_support" />	    	

</RelativeLayout>