<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <include layout="@layout/action_bar" />

    <RadioGroup
        android:id="@+id/rg_aca_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rl_ab_top"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="10.0dip" >

        <RadioButton
            android:id="@+id/rb_aca_very_satisfied"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="13.0sp" 
        	android:textColor="@color/black" 
            android:text="@string/radio_aca_very_satisfied" />

        <RadioButton
            android:id="@+id/rb_aca_satisfied"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13.0sp" 
        	android:textColor="@color/black" 
            android:text="@string/radio_aca_satisfied" />

        <RadioButton
            android:id="@+id/rb_aca_approve"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13.0sp" 
        	android:textColor="@color/black" 
            android:text="@string/radio_aca_approve" />
        
        <RadioButton
            android:id="@+id/rb_aca_reject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13.0sp" 
        	android:textColor="@color/black" 
            android:text="@string/radio_aca_reject" />
    </RadioGroup>

   	<ImageView 
		android:id="@+id/iv_aca_split_line" 
		android:background="@drawable/phase_trace_split_line" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10.0dip"
		android:layout_marginRight="10.0dip"
		android:layout_marginTop="20.0dip"
		android:layout_marginBottom="20.0dip"
		android:contentDescription="@string/image_null"
		android:layout_below="@id/rg_aca_radio_group" />
 
   	<RelativeLayout
	    android:orientation="vertical" 
	    android:paddingLeft="5.0dip" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/iv_aca_split_line"
	    android:layout_above="@+id/ll_aml_button_group" >
  
  	    <TextView 
	        android:id="@+id/tv_aca_description" 
	        android:textSize="15.0sp" 
	        android:textColor="@color/black" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10.0dip" 
	        android:text="@string/text_aca_description" 
	        android:singleLine="true" />
   	    	
	    <EditText
	        android:id="@+id/et_aca_customer_comments"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_centerHorizontal="true"
	        android:layout_margin="10.0dip"
	        android:gravity="top"
	        android:background="@drawable/bg_edittext_selector"
	        android:textSize="16.0sp"
	        android:includeFontPadding="true"
	        android:padding="15.0dip"
	        android:maxLength="100"
	        android:lineSpacingMultiplier="1.2"
	        android:layout_below="@id/tv_aca_description"
	        android:inputType="textMultiLine" >
	    </EditText>

    </RelativeLayout>
    
    <LinearLayout
        android:id="@id/ll_aml_button_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

		<com.yzfsys.app.widget.FButton
		    android:id="@+id/btn_aca_submit"
		    android:layout_width="0dp"
		    android:layout_height="50.0dip"
		    android:layout_weight="1"
		    android:layout_marginLeft="10.0dip"
		    android:layout_marginRight="5.0dip"
		    android:layout_marginTop="10.0dip"
		    android:layout_marginBottom="10.0dip"
		    android:textColor="@android:color/white"
		    fbutton:shadowEnabled="true"
		    fbutton:buttonColor="@color/fbutton_color_emerald"
		    android:text="@string/button_aca_submit"
		    android:layout_gravity="right|top" />	

    </LinearLayout>



</RelativeLayout>