<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/iv_al_logo"
        android:layout_width="228.0dip"
        android:layout_height="51.0dip"
        android:layout_marginTop="50.0dip"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/yzf_logo"
        android:contentDescription="@string/image_null" />

   <RelativeLayout
        android:id="@+id/rl_al_content"
        android:background="@drawable/login_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_al_logo"
        android:layout_marginLeft="15.0dip"
        android:layout_marginTop="6.0dip"
        android:layout_marginRight="15.0dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

         <EditText
            android:id="@+id/et_al_user_name"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="12.0dip"
            android:maxLines="1"
            android:singleLine="true" 
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:textColorHint="@color/editexthintbkg"
            android:background="@color/editextbkg"
            style="@style/login_text"
            android:hint="@string/al_user_name" />
         
         <View             
            android:id="@+id/v_al_login_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:layout_centerHorizontal="true"
           	android:layout_below="@+id/et_al_user_name"
            android:background="#ffcacdd1" />


        <EditText
            android:id="@+id/et_al_password"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="12.0dip"
            android:maxLines="1"
            android:maxLength="16"
            android:singleLine="true" 
            android:layout_below="@+id/v_al_login_line"
            android:background="@color/editextbkg"
            android:textColorHint="@color/editexthintbkg"
            android:gravity="center_vertical"
            style="@style/login_text"
            android:inputType="textPassword"
            android:hint="@string/al_password"
            android:imeActionLabel="@string/al_login"/>

    </RelativeLayout>
	<LinearLayout 
		android:id="@+id/ll_al_content2" 
		android:padding="1.0dip" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="20.0dip" 
		android:layout_below="@id/rl_al_content" 
		android:layout_alignLeft="@id/rl_al_content" 
		android:layout_alignRight="@id/rl_al_content">  
		
	    <Button
	        android:id="@+id/btn_al_login"
	        android:layout_width="fill_parent"
	        android:layout_height="45.0dip"
	        android:background="@drawable/login_button_select"
	        android:gravity="center"
	        android:text="@string/al_login"
	        style="@style/login_Btn_Font" />
	    
	</LinearLayout>    	
</RelativeLayout>
